# ING

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Directory.Build.props  LICENSE  README.md
AppFramework/Win32/: AppFrameworkWin32.cpp  AppFrameworkWin32.h  INGAppFrameworkWin32.cpp  INGAppFrameworkWin32.h  INGAppFrameworkWin32.sln  INGAppFrameworkWin32.vcxproj  INGAppFrameworkWin32.vcxproj.filters
ApplicationFrameworks/WinRT/: App.cpp  DebugUtility.cpp  DebugUtility.h  GameEngine.cpp  GameEngine.h  GameEngineWinRT.cpp  GameEngineWinRT.h  Graphics.cpp  Graphics.h  GraphicsDX12.cpp  GraphicsDX12.h  ObjectBase.h  Package.appxmanifest  ResultCode.h  TestObject.h  WinRT.sln  WinRT.vcxproj  WinRT.vcxproj.filters  d3dx12.h  pch.h  readme.txt
Documents/: DX12_Study.vsdx  ING Project Design Specification.docx  ING Project.vsdx
Examples/Windows/: CMakeLists.txt
INGCommon/: Exception.cpp  INGCommon.sln  INGCommon.vcxproj  INGCommon.vcxproj.filters  INGException.cpp  INGTrace.cpp  Trace.cpp  dllmain.cpp  precomp.h
INGCommon/Include/: Common.h  Configuration.h  Exception.h  INGCommon.h  INGConfiguration.h  INGException.h  Trace.h  (+3 more)
INGEngine/: CMakeLists.txt  Engine.cpp  Engine.h  IEngine.cpp  INGEngine.sln  INGEngine.vcxproj  INGEngine.vcxproj.filters  dllmain.cpp  precomp.h
INGGraphics/: Adapter.cpp  AdapterDX12.cpp  AdapterDX12.h  FrameDX12.cpp  FrameDX12.h  GraphicsDX12.cpp  GraphicsDX12.h  IAdapter.cpp  IFrame.cpp  IGraphics.cpp  INGGraphics.cpp  INGGraphics.sln  INGGraphics.vcxproj  INGGraphics.vcxproj.filters  INGGraphicsDX12.cpp  INGGraphicsDX12.h  dllmain.cpp
(+62 files in other folders)
